Fix webview crash on attempt to scroll.

This fixes crash of webview when its content is scrolled using
2-fingers gesture via touchpad or using touchscreen.

BUG=615512
TEST=Manually on device using Arc++ OptIn UI, ToS is scrolled
     as expected using touchscreen or touchpad, no crashes.
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2015373002
Cr-Commit-Position: refs/heads/master@{#397901}

Former-commit-id: d92694016e4cc9f7812894aa60eb4d36de6cd381